--- a/index.ipynb
+++ b/index.ipynb
@@ -110,6 +110,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "## your code here"
    ]
   },
