--- a/index.ipynb
+++ b/index.ipynb
@@ -111,7 +111,7 @@
    "outputs": [],
    "source": [
     "from sklearn.linear_model import LinearRegression\n",
-    "\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
     "\n",
     "\n",
     "\n",
