--- a/index.ipynb
+++ b/index.ipynb
@@ -112,7 +112,7 @@
    "source": [
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
-    "\n",
+    "from sklearn.preprocessing import PolynomialFeatures\n",
     "\n",
     "\n",
     "## your code here"
