--- a/index.ipynb
+++ b/index.ipynb
@@ -123,7 +123,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x_plot"
+   ]
   },
   {
    "cell_type": "code",
