Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -124,7 +124,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = x[:, np.newaxis]"
+    "X = x[:, np.newaxis]\n",
+    "X_plot = x-p"
    ]
   },
   {
