Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -125,7 +125,7 @@
    "outputs": [],
    "source": [
     "X = x[:, np.newaxis]\n",
-    "X_plot = x-p"
+    "X_plot = x_plot[:, ]"
    ]
   },
   {
