Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -127,7 +127,8 @@
     "X = x[:, np.newaxis]\n",
     "X_plot = x_plot[:, np.newaxis]\n",
     "\n",
-    "colors = ['yellow', 'lightgreen', 'blue']"
+    "colors = ['yellow', 'lightgreen', 'blue']\n",
+    "plt.figure(figsize=)"
    ]
   },
   {
