Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -128,7 +128,8 @@
     "X_plot = x_plot[:, np.newaxis]\n",
     "\n",
     "colors = ['yellow', 'lightgreen', 'blue']\n",
-    "plt.figure(figsize=)"
+    "plt.figure(figsize=(10, 6))\n",
+    "plt."
    ]
   },
   {
