Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -129,7 +129,7 @@
     "\n",
     "colors = ['yellow', 'lightgreen', 'blue']\n",
     "plt.figure(figsize=(10, 6))\n",
-    "plt."
+    "plt.scatter(x, y, color)"
    ]
   },
   {
