Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -130,7 +130,8 @@
     "colors = ['yellow', 'lightgreen', 'blue']\n",
     "plt.figure(figsize=(10, 6))\n",
     "plt.scatter(x, y, color='green', s=50, marker='.', label=\"plot points\")\n",
-    "\n"
+    "\n",
+    "for index, deg"
    ]
   },
   {
