Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -131,7 +131,8 @@
     "plt.figure(figsize=(10, 6))\n",
     "plt.scatter(x, y, color='green', s=50, marker='.', label=\"plot points\")\n",
     "\n",
-    "for index, degree in enumerate"
+    "for index, degree in enumerate([2,3,4]):\n",
+    "    "
    ]
   },
   {
