Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -132,7 +132,7 @@
     "plt.scatter(x, y, color='green', s=50, marker='.', label=\"plot points\")\n",
     "\n",
     "for index, degree in enumerate([2,3,4]):\n",
-    "    "
+    "    poly = PolynomialFeatures(deg)"
    ]
   },
   {
