Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -133,7 +133,8 @@
     "\n",
     "for index, degree in enumerate([2,3,4]):\n",
     "    poly = PolynomialFeatures(degree)\n",
-    "    X = poly.fit"
+    "    X = poly.fit_transform(X)\n",
+    "    X"
    ]
   },
   {
