Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -134,7 +134,7 @@
     "for index, degree in enumerate([2,3,4]):\n",
     "    poly = PolynomialFeatures(degree)\n",
     "    X = poly.fit_transform(X)\n",
-    "    X"
+    "    X_plot = poly.fit_tr"
    ]
   },
   {
