--- a/index.ipynb
+++ b/index.ipynb
@@ -135,7 +135,7 @@
     "    poly = PolynomialFeatures(degree)\n",
     "    X = poly.fit_transform(X)\n",
     "    X_plot = poly.fit_transform(X_plot)\n",
-    "    reg"
+    "    reg_poly = LinearRegression().fit"
    ]
   },
   {
