--- a/index.ipynb
+++ b/index.ipynb
@@ -135,7 +135,8 @@
     "    poly = PolynomialFeatures(degree)\n",
     "    X = poly.fit_transform(X)\n",
     "    X_plot = poly.fit_transform(X_plot)\n",
-    "    reg_poly = LinearRegression().fit"
+    "    reg_poly = LinearRegression().fit(X, y)\n",
+    "    y_plot"
    ]
   },
   {
