--- a/index.ipynb
+++ b/index.ipynb
@@ -136,7 +136,7 @@
     "    X = poly.fit_transform(X)\n",
     "    X_plot = poly.fit_transform(X_plot)\n",
     "    reg_poly = LinearRegression().fit(X, y)\n",
-    "    y_plot"
+    "    y_plot = reg_poly.predict()"
    ]
   },
   {
