Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -136,7 +136,8 @@
     "    X = poly.fit_transform(X)\n",
     "    X_plot = poly.fit_transform(X_plot)\n",
     "    reg_poly = LinearRegression().fit(X, y)\n",
-    "    y_plot = reg_poly.predict()"
+    "    y_plot = reg_poly.predict(X_plot)\n",
+    "    plt."
    ]
   },
   {
