--- a/index.ipynb
+++ b/index.ipynb
@@ -137,7 +137,7 @@
     "    X_plot = poly.fit_transform(X_plot)\n",
     "    reg_poly = LinearRegression().fit(X, y)\n",
     "    y_plot = reg_poly.predict(X_plot)\n",
-    "    plt.plot(x_plot, y_plot)"
+    "    plt.plot(x_plot, y_plot, color=color[index])"
    ]
   },
   {
