--- a/index.ipynb
+++ b/index.ipynb
@@ -138,7 +138,8 @@
     "    reg_poly = LinearRegression().fit(X, y)\n",
     "    y_plot = reg_poly.predict(X_plot)\n",
     "    plt.plot(x_plot, y_plot, color=color[index], linewidth = 2, label=\"degree %d\" % degree)\n",
-    "    print()"
+    "    print(\"degree %d\" % degree, r2_score(y, reg_poly.predict(X)))\n",
+    "    \n"
    ]
   },
   {
