Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -139,7 +139,8 @@
     "    y_plot = reg_poly.predict(X_plot)\n",
     "    plt.plot(x_plot, y_plot, color=color[index], linewidth = 2, label=\"degree %d\" % degree)\n",
     "    print(\"degree %d\" % degree, r2_score(y, reg_poly.predict(X)))\n",
-    "    \n"
+    "\n",
+    "plt.leg"
    ]
   },
   {
