Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -140,7 +140,7 @@
     "    plt.plot(x_plot, y_plot, color=color[index], linewidth = 2, label=\"degree %d\" % degree)\n",
     "    print(\"degree %d\" % degree, r2_score(y, reg_poly.predict(X)))\n",
     "\n",
-    "plt.leg"
+    "plt.legend(loc='lower left')"
    ]
   },
   {
